fix avatar size and spacing with name

--- a/style.css
+++ b/style.css
@@ -341,6 +341,7 @@ body {
         flex-direction: column;
         align-items: flex-start;
         flex-grow: 2;
+        gap: var(--spacing-500);
     }
 
     .dashboard-header .user-name {
@@ -355,6 +356,11 @@ body {
         gap: calc(21 / 16 * 1rem);
         padding-inline: var(--spacing-400);
         align-self: flex-start;
+    }
+    
+    .user .avatar {
+        min-width: 4.8rem;
+        min-height: 4.8rem;
     }
 
     .activities {
